mutants.out.old/log/src__colbert.rs_line_433_col_5_001.log

*** src/colbert.rs:433:5: replace refine_with_config -> Vec<(I, f32)> with vec![(Default::default(), 0.0)]

*** mutation diff:
--- src/colbert.rs
+++ replace refine_with_config -> Vec<(I, f32)> with vec![(Default::default(), 0.0)]
@@ -425,40 +425,17 @@
 /// Refine with full configuration.
 #[must_use]
 pub fn refine_with_config<I: Clone + Eq + std::hash::Hash>(
     candidates: &[(I, f32)],
     query: &[Vec<f32>],
     docs: &[(I, Vec<Vec<f32>>)],
     config: RefineConfig,
 ) -> Vec<(I, f32)> {
-    use std::collections::HashMap;
-
-    let doc_map: HashMap<&I, &Vec<Vec<f32>>> = docs.iter().map(|(id, toks)| (id, toks)).collect();
-    let query_refs = crate::as_slices(query);
-    let alpha = config.alpha;
-
-    let mut results: Vec<(I, f32)> = candidates
-        .iter()
-        .filter_map(|(id, orig_score)| {
-            let doc_tokens = doc_map.get(id)?;
-            let doc_refs = crate::as_slices(doc_tokens);
-            let maxsim_score = simd::maxsim(&query_refs, &doc_refs);
-            let blended = (1.0 - alpha).mul_add(maxsim_score, alpha * orig_score);
-            Some((id.clone(), blended))
-        })
-        .collect();
-
-    crate::sort_scored_desc(&mut results);
-
-    if let Some(k) = config.top_k {
-        results.truncate(k);
-    }
-
-    results
+    vec![(Default::default(), 0.0)] /* ~ changed by cargo-mutants ~ */
 }
 
 // ─────────────────────────────────────────────────────────────────────────────
 // Tests
 // ─────────────────────────────────────────────────────────────────────────────
 
 #[cfg(test)]
 mod tests {


*** /opt/homebrew/bin/cargo test --no-run --verbose --package=rank-refine@0.7.9
       Fresh unicode-ident v1.0.22
       Fresh proc-macro2 v1.0.103
       Fresh quote v1.0.42
       Fresh libc v0.2.177
       Fresh syn v2.0.111
       Fresh cfg-if v1.0.4
       Fresh zerocopy-derive v0.8.30
       Fresh zerocopy v0.8.30
       Fresh getrandom v0.3.4
       Fresh autocfg v1.5.0
       Fresh crossbeam-utils v0.8.21
       Fresh serde_core v1.0.228
       Fresh crossbeam-epoch v0.9.18
       Fresh rand_core v0.9.3
       Fresh serde_derive v1.0.228
       Fresh errno v0.3.14
       Fresh regex-syntax v0.8.8
       Fresh once_cell v1.21.3
       Fresh bitflags v2.10.0
       Fresh either v1.15.0
       Fresh rustix v1.1.2
       Fresh serde v1.0.228
       Fresh num-traits v0.2.19
       Fresh crossbeam-deque v0.8.6
       Fresh half v2.7.1
       Fresh memchr v2.7.6
       Fresh ciborium-io v0.2.2
       Fresh clap_lex v0.7.6
       Fresh ryu v1.0.20
       Fresh itoa v1.0.15
       Fresh anstyle v1.0.13
       Fresh fastrand v2.3.0
       Fresh plotters-backend v0.3.7
       Fresh plotters-svg v0.3.7
       Fresh tempfile v3.23.0
       Fresh clap_builder v4.5.53
       Fresh serde_json v1.0.145
       Fresh ciborium-ll v0.2.2
       Fresh rayon-core v1.13.0
       Fresh itertools v0.10.5
       Fresh regex-automata v0.4.13
       Fresh ppv-lite86 v0.2.21
       Fresh wait-timeout v0.2.1
       Fresh cast v0.3.0
       Fresh bit-vec v0.8.0
       Fresh fnv v1.0.7
       Fresh same-file v1.0.6
       Fresh quick-error v1.2.3
       Fresh rusty-fork v0.3.1
       Fresh walkdir v2.5.0
       Fresh bit-set v0.8.0
       Fresh criterion-plot v0.5.0
       Fresh rand_chacha v0.9.0
       Fresh regex v1.12.2
       Fresh rayon v1.11.0
       Fresh ciborium v0.2.2
       Fresh tinytemplate v1.2.1
       Fresh clap v4.5.53
       Fresh plotters v0.3.7
       Fresh rand_xorshift v0.4.0
       Fresh rand v0.9.2
       Fresh is-terminal v0.4.17
       Fresh oorandom v11.1.5
       Fresh anes v0.1.6
       Fresh unarray v0.1.4
       Fresh proptest v1.9.0
       Fresh criterion v0.5.1
       Dirty rank-refine v0.7.9 (/private/var/folders/dt/jq9nqy8x2wd65h22qb9rptjr0000gn/T/cargo-mutants-rank-refine-DHUa65.tmp): couldn't read metadata for file `target/debug/deps/librank_refine-a97128c91e1742ac.rlib`
   Compiling rank-refine v0.7.9 (/private/var/folders/dt/jq9nqy8x2wd65h22qb9rptjr0000gn/T/cargo-mutants-rank-refine-DHUa65.tmp)
     Running `rustc --crate-name rank_refine --edition=2021 src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked --cfg 'feature="default"' --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values("default", "hierarchical", "kodama"))' -C metadata=a9145a0b8e512428 -C extra-filename=-a97128c91e1742ac --out-dir /private/var/folders/dt/jq9nqy8x2wd65h22qb9rptjr0000gn/T/cargo-mutants-rank-refine-DHUa65.tmp/target/debug/deps -C incremental=/private/var/folders/dt/jq9nqy8x2wd65h22qb9rptjr0000gn/T/cargo-mutants-rank-refine-DHUa65.tmp/target/debug/incremental -L dependency=/private/var/folders/dt/jq9nqy8x2wd65h22qb9rptjr0000gn/T/cargo-mutants-rank-refine-DHUa65.tmp/target/debug/deps`
error[E0277]: the trait bound `I: Default` is not satisfied
   --> src/colbert.rs:433:11
    |
433 |     vec![(Default::default(), 0.0)] /* ~ changed by cargo-mutants ~ */
    |           ^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `I`
    |
help: consider further restricting type parameter `I` with trait `Default`
    |
427 | pub fn refine_with_config<I: Clone + Eq + std::hash::Hash + std::default::Default>(
    |                                                           +++++++++++++++++++++++

For more information about this error, try `rustc --explain E0277`.
error: could not compile `rank-refine` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `rustc --crate-name rank_refine --edition=2021 src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked --cfg 'feature="default"' --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values("default", "hierarchical", "kodama"))' -C metadata=a9145a0b8e512428 -C extra-filename=-a97128c91e1742ac --out-dir /private/var/folders/dt/jq9nqy8x2wd65h22qb9rptjr0000gn/T/cargo-mutants-rank-refine-DHUa65.tmp/target/debug/deps -C incremental=/private/var/folders/dt/jq9nqy8x2wd65h22qb9rptjr0000gn/T/cargo-mutants-rank-refine-DHUa65.tmp/target/debug/incremental -L dependency=/private/var/folders/dt/jq9nqy8x2wd65h22qb9rptjr0000gn/T/cargo-mutants-rank-refine-DHUa65.tmp/target/debug/deps` (exit status: 1)

*** result: Failure(101)
